# terminale

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  lefthook.yml  release-plz.toml  typos.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: audit.yml  ci.yml  nightly.yml  oneoff-strip-release-date.yml  patch-v019-notes-once.yml  recover-v0110-once.yml  release.yml  sign-and-notarize.yml
assets/icons/: terminale.icns
ci-logs/: host-v0110-tail.txt
crates/terminale/: Cargo.toml  build.rs
crates/terminale-ai/: Cargo.toml
crates/terminale-ai/src/: claude.rs  lib.rs  ollama.rs  openai.rs  suggestion.rs
crates/terminale-config/: Cargo.toml
crates/terminale-config/src/: ai.rs  appearance.rs  background_fx.rs  backup.rs  bell.rs  clipboard_history.rs  context_rules.rs  cursor.rs  directory_jump.rs  font.rs  gpu.rs  integration.rs  keybinds.rs  lib.rs  logging.rs  paths.rs  plugins.rs  profile.rs  profiles_config.rs  quake.rs  quick_select.rs  resource_indicators.rs  secrets.rs  snippets.rs  ssh.rs  status_bar.rs  terminal.rs  theme.rs  theme_catalog.rs  updates.rs  window.rs
crates/terminale-core/: Cargo.toml
crates/terminale-core/src/: error.rs  event.rs  lib.rs  session.rs
crates/terminale-plugin/: Cargo.toml
crates/terminale-plugin/src/: lib.rs
crates/terminale-render/: Cargo.toml  NOTICE
crates/terminale-render/assets/fonts/: THIRD-PARTY-FONTS.md
crates/terminale-render/assets/fonts/icons/: LICENSE
crates/terminale-render/src/: bg_fx.rs  bg_image.rs  bg_pipeline.rs  box_drawing.rs  bundled_fonts.rs  image_blit.rs  lib.rs  system_icons.rs
crates/terminale-render/src/shaders/: cell.wgsl
crates/terminale-ssh/: Cargo.toml
crates/terminale-ssh/src/: lib.rs
crates/terminale-term/: Cargo.toml
crates/terminale-term/src/: apc_graphics.rs  images.rs  lib.rs  semantic.rs  sixel.rs
crates/terminale-ui/: Cargo.toml
crates/terminale-ui/src/: lib.rs
crates/terminale/src/: ai_assistant_window.rs  app_icon.rs  config_watch.rs  confirm_close.rs  context_menu_window.rs  copy_mode.rs  desktop_entry.rs  dir_jump.rs  egui_icons.rs  icons.rs  keymap.rs  kitty_keyboard.rs  links.rs  main.rs  markdown.rs  monitor_names.rs  mouse.rs  osc_handlers.rs  palette.rs  panes.rs  password_prompt.rs  paste_guard.rs  process_job.rs  quick_select.rs  resources.rs  settings_window.rs  shell_integration.rs  shortcuts.rs  ssh_tabs.rs  status_bar.rs  suggestions.rs  tab_groups.rs  tabs.rs  update.rs  window_anim.rs  workspace.rs
crates/terminale/src/settings_window/: about.rs  ai.rs  appearance.rs  backup.rs  bell.rs  clipboard_history.rs  context_rules.rs  cursor.rs  directory_jump.rs  font.rs  gpu.rs  integration.rs  logging.rs  plugins.rs  profiles.rs  quake.rs  quick_select.rs  shortcuts.rs  snippets.rs  ssh.rs  status_bar.rs  terminal.rs  window.rs  workspaces.rs
crates/terminale/wix/: main.wxs
docs/: README.md  build.md  config.md  plugins.md  release-signing.md  roadmap.md  theming.md  uninstall.md
docs/screenshots/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
