[package]
name = "terminale-plugin"
description = "Lua 5.4 plugin host (mlua) for terminale — sandboxed scripting + lifecycle hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mlua.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
