[package]
name = "terminale-term"
description = "Terminal engine wrapper around alacritty_terminal (grid + ANSI state)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alacritty_terminal.workspace = true
unicode-width.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
terminale-core.workspace = true
image.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
