[package]
name = "terminale"
description = "A native, cross-platform, GPU-accelerated terminal — Windows, macOS, Linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wix]
upgrade-guid = "12DF16BF-9F61-4A2C-875F-81464A631294"
path-guid = "7C660AF0-C2EC-4112-A654-C4DC89569FA4"
license = false
eula = false

[[bin]]
name = "terminale"
path = "src/main.rs"

# Embed the application icon into terminale.exe so the taskbar, Alt-Tab, and the
# MSI/Start-Menu/Desktop shortcuts show the brand glyph instead of the generic
# executable icon. Windows-host builds only; absent (and build.rs is a no-op)
# elsewhere.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
clap.workspace = true
anyhow.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
winit.workspace = true
parking_lot.workspace = true
bytes.workspace = true
arboard.workspace = true
open.workspace = true
sysinfo.workspace = true
self_update.workspace = true
self-replace.workspace = true
sha2.workspace = true
tempfile.workspace = true
global-hotkey.workspace = true
schemars.workspace = true
serde_json.workspace = true
resvg.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
rfd.workspace = true
terminale-core.workspace = true
terminale-term.workspace = true
terminale-config.workspace = true
terminale-render.workspace = true
terminale-ai.workspace = true
terminale-ui.workspace = true
terminale-plugin.workspace = true
terminale-ssh.workspace = true
notify-rust.workspace = true
notify.workspace = true
regex.workspace = true
chrono.workspace = true
serde.workspace = true
toml.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
# Win32 display-configuration APIs for friendly monitor names and primary
# monitor detection. windows-sys 0.59 is already in the workspace dependency
# tree (pulled in by winit / global-hotkey / rfd). We pin the same version to
# avoid a duplicate.
#
# Features used:
#   Win32_Foundation           → ERROR_SUCCESS, BOOL
#   Win32_Devices_Display      → QueryDisplayConfig, DisplayConfigGetDeviceInfo
#   Win32_Graphics_Gdi         → EnumDisplayMonitors, GetMonitorInfoW, MONITORINFO
#   Win32_UI_WindowsAndMessaging → MONITORINFOF_PRIMARY (lives here, NOT in Gdi)
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# Read the OS's real mouse-button state (NSEvent +pressedMouseButtons) so a
# dropped trackpad button-release can't leave a stale "left held" flag that
# turns plain cursor motion into a runaway selection. objc2 0.6 is already in
# the tree (via arboard); we only call one class method, no typed AppKit
# bindings needed.
objc2 = "0.6"
# Quake dock-mode positioning uses native NSWindow.setFrame against
# NSScreen.visibleFrame: winit's set_outer_position double-counts the macOS
# menu bar (the window lands ~2x the menu-bar height below the top) and can't
# place a window in the menu-bar band at all. We reach the NSWindow via the
# winit raw window handle (same rwh major as winit).
raw-window-handle = "0.6"

[lints]
workspace = true
